<resources>
    <string name="app_name">Praca Inżynierska</string>
    <string name="coach">Trener</string>
    <string name="user">Użytkownik</string>
    <string name="notes">Notatki</string>
    <string name="add_new">Dodaj nową</string>
    <string name="no_data">Brak danych</string>
    <string name="modify">Modyfikuj</string>
    <string name="delete">Usuń</string>
    <string name="menu">Menu</string>
    <string name="exercises">Cwiczenia</string>
    <string name="personal_info">Personalia</string>
    <string name="archive">Archiwum</string>
    <string name="exercise_purposes">Cele cwiczeń</string>
    <string name="body_parameters">Parametry ciała</string>
    <string name="add_new_purpose">Dodaj nowy</string>
    <string name="exercise_purpose">Cel ćwiczenia</string>
    <string name="current_state">Obecny stan</string>
    <string name="user_menu">Menu użytkownika</string>
    <string name="coach_menu">Menu trenera</string>
    <string name="note_details">Szczegóły notatki</string>
    <string name="user_choice">Wybór użytkownika</string>
    <string name="purpose_details">Szczegółu celu</string>
    <string name="parameters">Parametry</string>
    <string name="exercise_menu">Menu cwiczeń</string>
    <string name="save">Zapisz</string>
    <string name="create_new_purpose">Utwórz nowy cel</string>
    <string name="edit_purpose">Edytuj cel</string>
    <string name="more_than_0_characters_required">Wymagane więcej niż 0 znaków</string>
    <string name="add_new_body_parameter">Dodaj nowy parametr</string>
    <string name="name">Nazwa</string>
    <string name="circumference">Obwód</string>
    <string name="parameter_detail">Szczegóły parametru</string>
    <string name="edit_parameter">Edytuj parametr</string>
    <string name="create_new_note">Utwórz nową notatkę</string>
    <string name="edit_note">Edytuj notatkę</string>
    <string name="must_be_floating_point">Musi byc to liczba zmiennoprzecinkowa z kropką np. 5.0</string>
    <string name="more_than_0_less_than_300">Pole nie może być puste oraz nie dłuższe niż 300 znaków</string>
    <string name="more_than_0_less_than_50">Pole nie może być puste i nie dłuższe niż 50 znaków</string>
    <string name="more_than_0_less_than_100">Pole nie może być puste i nie dłuższe niż 100 znaków</string>
    <string name="more_than_0_less_than_10">Pole nie może być puste i nie dłuższe niż 10 znaków</string>
    <string name="less_than_50">Pole musi mieć mniej niż 50 znaków</string>
    <string name="less_than_300">Pole musi mieć mniej niż 300 znaków</string>
    <string name="less_than_100">Pole musi zawierać mniej niż 100 znaków</string>
    <string name="less_than_10">Pole musi zawierać mniej niż 10 znaków</string>
    <string name="beginer">Początkujący</string>
    <string name="intermediate">średnio-zaawansowany</string>
    <string name="advanced">Zaawansowany</string>
    <string name="no_equipment">Brak sprzętu</string>
    <string name="small_equipment">Niewielki sprzęt</string>
    <string name="exercise_machines">Maszyny do ćwiczeń</string>
    <string name="warmup">Rozgrzewka</string>
    <string name="cardio">Kardio</string>
    <string name="strength_exercise">Siłowe</string>
    <string name="exercise_archive_details">Archiwum - szczegóły</string>
    <string name="exercise_name">Nazwa ćwiczenia</string>
    <string name="muscle_part">Partia mięśni</string>
    <string name="date">Data</string>
    <string name="time">Czas</string>
    <string name="series">Liczba serii</string>
    <string name="repeats_in_set">Powtórzenia w serii</string>
    <string name="load">Obciążenie</string>
    <string name="order_exercise">Zadaj ćwiczenie</string>
    <string name="exercise_list">Lista ćwiczeń</string>
    <string name="exercises_list">Lista ćwiczeń</string>
    <string name="exercises_list_to_do">Lista zadanych ćwiczeń</string>
    <string name="add">Dodaj</string>
    <string name="search">Szukaj</string>
    <string name="no_filter">Brak filtra</string>
    <string name="exercise_details">Cwiczenie - szczegóły</string>
    <string name="difficult_level">Poziom trudności</string>
    <string name="equipment_requirement">Wymaganie sprzętowe</string>
    <string name="exercise_type">Typ ćwiczenia</string>
    <string name="demonstration">Demonstracja</string>
    <string name="create_new_exercise">Utwórz nowe ćwiczenie</string>
    <string name="add_new_exercise">Utwórz nowe ćwiczenie</string>
    <string name="edit_exercise">Edytuj ćwiczenie</string>
    <string name="less_tahn_1000_characters">Pole musi zawierać mniej niż 1000 znaków</string>
    <string name="exercise_to_do_details">Zadane ćwiczenie - szczegóły</string>
    <string name="choose_exercise_to_do">Wybierz ćwiczenie do zadania</string>
    <string name="set_exercise_to_do_params">Ustaw parametry zadawanego ćwiczenie</string>
    <string name="day">Dzień</string>
    <string name="month">Miesiąc</string>
    <string name="tap_to_choose_date">Dotknij aby wybrać datę</string>
    <string name="must_be_integer">Musi być to liczba całkowita</string>
    <string name="seconds">sekund</string>
    <string name="exercise_plans">Plany treningowe</string>
    <string name="execute_exercise">Wykonaj ćwiczenie</string>
    <string name="set_exercise_parameters">Ustal parametry ćwiczenia</string>
    <string name="training_plans">Plany treningowe</string>
    <string name="exercises_in_training_plan">Cwiczenia w planie treningowym</string>
    <string name="series_shorter">Serie</string>
    <string name="repeats">Powtórzenia</string>
    <string name="any">Dowolna</string>
    <string name="dialog_message">Do działania aplikacji wymagane są wcześniejsze pozwolenia.</string>
    <string name="warning">Uwaga</string>
    <string name="ok">OK</string>
    <string name="parameters_name">Nazwa parametru</string>
    <string name="parameter_s_current_state_decimal_number">Wartość parametru, liczba zmienno przecinkowa</string>
    <string name="enter_note_content">Wprowadź treść notatki</string>
    <string name="enter_current_state">Wprowadź aktualny stan</string>
    <string name="plans_name">Nazwa planu</string>
    <string name="archival_circumference">Obwód archiwalny</string>
    <string name="archival_exercise_purpose">Archiwalny cel ćwiczenia</string>
    <string name="exercise_screen">Ekran ćwiczenia</string>
    <string name="end_of_exercise">Koniec ćwiczenia</string>
    <string name="end_of_set">Koniec serii</string>
    <string name="begin_exercise">Rozpocznij ćwiczenie</string>
    <string name="stop_exercise">Przerwij ćwiczenia</string>
    <string name="push_up">Pompka</string>
    <string name="squat">Przysiad</string>
    <string name="table_pull">Podciaganie na krawędzi stołu</string>
    <string name="arms_and_legs_raise_lie_on_belly">Unoszenie pleców i nóg w leżeniu na brzuchu</string>
    <string name="pull_up">Podciągnięcie na drążku</string>
    <string name="Push_up_demonstration">Połóż urządzenie na ziemi. Wykonaj podpór przodem, z urzadzeniem na wysokości czoła. Dłonie ustaw nieco szerzej niż szerokość barków, na wysokosci klatki piersiowej. Ugnij ramiona i wykonuj ruch prostująć ręce w łokciach. Urządzenie zliczy powtórzenia gdy zbliżysz czoło do niego na odległość 5 cm.</string>
    <string name="squat_demonstration">Trzymaj urządzenie w ręce i wykonuj przysiady. Urządzenie zlicza przysiady z maksymalną częstotliwością 1 na 3 sekundy.</string>
    <string name="table_pull_demonstration">Połóż się na plecach pod stołem. Połóż urzadzenie pod szyją. Chwyć za krawędź stołu szerokim nachwytem i unieś tułów jak najwyżej, trzymając stopy na ziemi. Ciało cały czas utrzymuj w jednej linii. Urządzenie zliczy powtórzenia gdy zbliżysz szyję do niego na odległość 5 cm.</string>
    <string name="arms_legs_raise_demonstration">Połóż się na brzuchu, połóż urządzenie pod czołem, nogi wyprostowane trzymaj razem, ręce splecione na karku łokciami na zewnątrz. Następnie powoli wykonaj odgięcie tułowia maksymalnie do góry, z jednoczesnym uniesieniem nóg. Powli wracaj do pozycji wyjściowej. Urządzenie zliczy powtórzenie gry zbliżysz czoło na odległość 5 cm.</string>
    <string name="pull_up_demonstration">Złap drążek nachwytem. Szerokość chwytu zgodna z poleceniem trenera. Wykonaj zwis na lekko zgiętych rękach. Podciągaj się na lekko zgiętych rękach, tak aby klatka znalazła się jak najbliżej drążka. Opuść się do pozycji wyjściowej.</string>
    <string name="Back_Muscle">Plecy</string>
    <string name="Chest_Muscle">Klatka piersiowa</string>
    <string name="and">i</string>
    <string name="abs_muscle">brzuch</string>
    <string name="arms">ręce</string>
    <string name="thighs_muscle">Pośladki</string>
    <string name="confirm">Potwierdzenie</string>
    <string name="popup_end_exercise_confirm">Czy chcesz zakończyć ćwiczenie?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="breaks_time">Czas przerw</string>
    <string name="exercise_time">Czas ćwiczenia</string>
    <string name="exercise_reminder">Przypomnienie o ćwiczeniach</string>
    <string name="title_activity_tracker">Mapa</string>
    <string name="permission_refused">Nie udzielono odpowiednich uprawnień</string>
    <string name="permission_request_title">Wymaga specjalnych uprawnień</string>
    <string name="app_permission_notice">Uprawnienia są potrzebne do prawidłowego działania aplikacji.</string>
    <string name="route_distance">Dystans</string>
    <string name="route_duration">Czas trwania</string>
    <string name="server_error">Błąd serwera</string>
    <string name="failed_draw">Empty line path return</string>
    <string name="running">Bieganie</string>
    <string name="legs_muscle">Nogi</string>
    <string name="cycling">Jazda na rowerze</string>
    <string name="enter_distance">Wprowadź dystans(w metrach)</string>
    <string name="distance_unit">[m]</string>
    <string name="cannot_delete_sensor_exercise_message">Nie można usunąć ćwiczeń korzystających z czujników</string>
</resources>