<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lewczyk.pracainzynierska.UserFeatures.ArchiveDetailActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/exercise_name"/>

            <TextView
                android:id="@+id/exerciseArchiveExerciseNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/muscle_part"/>

            <TextView
                android:id="@+id/exerciseArchiveMusclePartTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/date"/>

            <TextView
                android:id="@+id/exerciseArchiveExerciseDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/time"/>

            <TextView
                android:id="@+id/exerciseArchiveExerciseTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/setNumberArchiveDetailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/series"/>

            <TextView
                android:id="@+id/exerciseArchiveExerciseSeriesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/repeatsNumberArchiveDetailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/repeats_in_set"/>

            <TextView
                android:id="@+id/exerciseArchiveExerciseRepeatsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/exerciseArchiveLoadTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/load"/>

            <TextView
                android:id="@+id/exerciseArchiveExerciseLoadTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
</ScrollView>