<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lewczyk.pracainzynierska.UserExercise.UserExerciseToDoDetailActivity">

    <TextView
        android:id="@+id/userExerciseToDoNameTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="20dp"
        android:text="@string/exercise_name"/>

    <TextView
        android:id="@+id/userExerciseToDoNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userExerciseToDoNameTitleTextView">
    </TextView>

    <TextView
        android:id="@+id/userExerciseToDoMusclePartTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/muscle_part"
        android:textSize="20dp"
        android:layout_below="@id/userExerciseToDoNameTextView"/>

    <TextView
        android:id="@+id/userExerciseToDoMusclePartTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userExerciseToDoMusclePartTitleTextView">
    </TextView>

    <TextView
        android:id="@+id/userExerciseToDoDateTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20dp"
        android:layout_below="@id/userExerciseToDoMusclePartTextView"/>

    <TextView
        android:id="@+id/userExerciseToDoDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userExerciseToDoDateTitleTextView">
    </TextView>

    <TextView
        android:id="@+id/userExerciseToDoSeriesTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/series"
        android:textSize="20dp"
        android:layout_below="@id/userExerciseToDoDateTextView"/>

    <TextView
        android:id="@+id/userExerciseToDoSeriesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userExerciseToDoSeriesTitleTextView">
    </TextView>

    <TextView
        android:id="@+id/userExerciseToDoRepeatsTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeats_in_set"
        android:textSize="20dp"
        android:layout_below="@id/userExerciseToDoSeriesTextView"/>

    <TextView
        android:id="@+id/userExerciseToDoRepeatsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userExerciseToDoRepeatsTitleTextView">
    </TextView>

    <TextView
        android:id="@+id/userExerciseToDoLoadTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:textSize="20dp"
        android:layout_below="@id/userExerciseToDoRepeatsTextView"/>

    <TextView
        android:id="@+id/userExerciseToDoLoadTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userExerciseToDoLoadTitleTextView"/>

    <Button
        android:id="@+id/userExerciseToDoExecuteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/execute_exercise"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>