<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lewczyk.pracainzynierska.UserExercise.UserExerciseMenuActivity">

    <Button
        android:id="@+id/userExerciseToDoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercises_list_to_do"
        android:textSize="25sp"
        android:background="@android:color/transparent"
        android:layout_above="@+id/userExercisePlanButton"/>

    <Button
        android:id="@+id/userExercisePlanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_plans"
        android:textSize="25sp"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/userExerciseListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_below="@id/userExercisePlanButton"
        android:background="@android:color/transparent"
        android:text="@string/exercises"/>

</RelativeLayout>