<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="lewczyk.pracainzynierska.UserExercise.UserExercisePlanExerciseList.UserExercisePlanExerciseListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/userExerciseInPlanLabels"
        android:weightSum="1.5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:textSize="13sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginLeft="15dp"
            android:text="@string/exercise_name"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="13sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/series_shorter"
            android:layout_weight="0.33" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="13sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/repeats"
            android:layout_weight="0.33" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="13sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_weight="0.34"
            android:text="@string/load"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/userExerciseInTrainingPlanListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userExerciseInPlanLabels">
    </ListView>

</RelativeLayout>